--- a/atlas-hub/pre-conf/atlas-script-application.properties
+++ b/atlas-hub/pre-conf/atlas-script-application.properties
@@ -244,7 +244,7 @@ atlas.server.ha.enabled=false
 #atlas.server.ha.zookeeper.auth=<scheme>:<authinfo>
 
 ######### Atlas Authorization #########
-atlas.authorizer.impl=org.apache.ranger.authorization.atlas.authorizer.RangerAtlasAuthorizer
+atlas.authorizer.impl=none
 atlas.authorizer.simple.authz.policy.file=atlas-simple-authz-policy.json
 
 #########  Type Cache Implementation ########
