--- a/atlas-hub/pre-conf/ranger/install/conf.templates/enable/ranger-atlas-security-changes.cfg
+++ b/atlas-hub/pre-conf/ranger/install/conf.templates/enable/ranger-atlas-security-changes.cfg
@@ -21,7 +21,7 @@ ranger.plugin.atlas.service.name %REPOSITORY_NAME% mod create-if-not-exists
 ranger.plugin.atlas.policy.source.impl org.apache.ranger.admin.client.RangerAdminRESTClient mod create-if-not-exists
 
 ranger.plugin.atlas.policy.rest.url             %POLICY_MGR_URL%                        mod create-if-not-exists
-ranger.plugin.atlas.policy.rest.ssl.config.file /etc/atlas/conf/ranger-policymgr-ssl.xml mod create-if-not-exists
+ranger.plugin.atlas.policy.rest.ssl.config.file %COMPONENT_INSTALL_DIR_NAME%/conf/ranger-policymgr-ssl.xml mod create-if-not-exists
 ranger.plugin.atlas.policy.pollIntervalMs       30000                                   mod create-if-not-exists
 ranger.plugin.atlas.policy.cache.dir            %POLICY_CACHE_FILE_PATH%                mod create-if-not-exists
 ranger.plugin.atlas.policy.rest.client.connection.timeoutMs 120000				       mod create-if-not-exists
