--- a/atlas-hub/pre-conf/ranger/install.properties
+++ b/atlas-hub/pre-conf/ranger/install.properties
@@ -19,7 +19,7 @@
 # Example:
 # POLICY_MGR_URL=http://policymanager.xasecure.net:6080
 #
-POLICY_MGR_URL=
+POLICY_MGR_URL=RANGER_SERVICE_URL
 
 #
 # This is the repository name created within policy manager
@@ -27,12 +27,12 @@ POLICY_MGR_URL=
 # Example:
 # REPOSITORY_NAME=atlasdev
 #
-REPOSITORY_NAME=
+REPOSITORY_NAME=ATLAS_REPOSITORY_NAME
 
 #
 # Atlas installation directory
 #
-COMPONENT_INSTALL_DIR_NAME=
+COMPONENT_INSTALL_DIR_NAME=ATLAS_INSTALL_DIR
 
 # AUDIT configuration with V3 properties
 
@@ -58,13 +58,13 @@ XAAUDIT.SOLR.ZOOKEEPER=NONE
 #XAAUDIT.ELASTICSEARCH.URL=localhost
 #XAAUDIT.ELASTICSEARCH.INDEX=audit
 
-XAAUDIT.ELASTICSEARCH.ENABLE=false
-XAAUDIT.ELASTICSEARCH.URL=NONE
-XAAUDIT.ELASTICSEARCH.USER=NONE
-XAAUDIT.ELASTICSEARCH.PASSWORD=NONE
-XAAUDIT.ELASTICSEARCH.INDEX=NONE
-XAAUDIT.ELASTICSEARCH.PORT=NONE
-XAAUDIT.ELASTICSEARCH.PROTOCOL=NONE
+# XAAUDIT.ELASTICSEARCH.ENABLE=false
+# XAAUDIT.ELASTICSEARCH.URL=NONE
+# XAAUDIT.ELASTICSEARCH.USER=NONE
+# XAAUDIT.ELASTICSEARCH.PASSWORD=NONE
+# XAAUDIT.ELASTICSEARCH.INDEX=NONE
+# XAAUDIT.ELASTICSEARCH.PORT=NONE
+# XAAUDIT.ELASTICSEARCH.PROTOCOL=NONE
 
 # Enable audit logs to HDFS
 #Example
@@ -87,12 +87,12 @@ XAAUDIT.HDFS.AZURE_SHELL_KEY_PROVIDER=__REPLACE_AZURE_SHELL_KEY_PROVIDER
 XAAUDIT.HDFS.AZURE_ACCOUNTKEY_PROVIDER=__REPLACE_AZURE_ACCOUNT_KEY_PROVIDER
 
 #Log4j Audit Provider
-XAAUDIT.LOG4J.ENABLE=false
-XAAUDIT.LOG4J.IS_ASYNC=false
-XAAUDIT.LOG4J.ASYNC.MAX.QUEUE.SIZE=10240
-XAAUDIT.LOG4J.ASYNC.MAX.FLUSH.INTERVAL.MS=30000
-XAAUDIT.LOG4J.DESTINATION.LOG4J=true
-XAAUDIT.LOG4J.DESTINATION.LOG4J.LOGGER=xaaudit
+# XAAUDIT.LOG4J.ENABLE=false
+# XAAUDIT.LOG4J.IS_ASYNC=false
+# XAAUDIT.LOG4J.ASYNC.MAX.QUEUE.SIZE=10240
+# XAAUDIT.LOG4J.ASYNC.MAX.FLUSH.INTERVAL.MS=30000
+# XAAUDIT.LOG4J.DESTINATION.LOG4J=true
+# XAAUDIT.LOG4J.DESTINATION.LOG4J.LOGGER=xaaudit
 
 # End of V3 properties
 
