--- a/pom.xml
+++ b/pom.xml
@@ -897,12 +897,6 @@
 
             <dependency>
                 <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-simple</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.slf4j</groupId>
                 <artifactId>jul-to-slf4j</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
@@ -1616,11 +1610,11 @@
                 <scope>test</scope>
             </dependency>
 
-            <dependency>
+            <!-- <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.1</version>
-            </dependency>
+            </dependency> -->
 
             <dependency>
                 <groupId>commons-lang</groupId>
