--- a/pom.xml
+++ b/pom.xml
@@ -1610,11 +1610,11 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- <dependency>
+            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.1</version>
-            </dependency> -->
+                <version>3.4</version>
+            </dependency>
 
             <dependency>
                 <groupId>commons-lang</groupId>
