--- a/pom.xml
+++ b/pom.xml
@@ -1065,13 +1065,13 @@
                 <version>${zookeeper.version}</version>
             </dependency>
 
-            <dependency>
+            <!-- <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-bom</artifactId>
                 <version>4.1.61.Final</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency> -->
 
             <dependency>
                 <groupId>org.springframework</groupId>
