update ranger configs

--- a/atlas-hub/pre-conf/atlas-application.properties
+++ b/atlas-hub/pre-conf/atlas-application.properties
@@ -216,7 +216,7 @@ atlas.server.ha.enabled=false
 
 
 ######### Atlas Authorization #########
-atlas.authorizer.impl=NONE
+atlas.authorizer.impl=ranger
 atlas.authorizer.simple.authz.policy.file=atlas-simple-authz-policy.json
 
 #########  Type Cache Implementation ########
