--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -122,12 +122,12 @@ atlas.graph.storage.hbase.regions-per-server=1
                                 <configuration>
                                     <skipAssembly>false</skipAssembly>
                                     <descriptors>
-                                        <descriptor>src/main/assemblies/atlas-hbase-hook-package.xml</descriptor>
+                                        <!-- <descriptor>src/main/assemblies/atlas-hbase-hook-package.xml</descriptor>
                                         <descriptor>src/main/assemblies/atlas-hive-hook-package.xml</descriptor>
                                         <descriptor>src/main/assemblies/atlas-impala-hook-package.xml</descriptor>
                                         <descriptor>src/main/assemblies/atlas-falcon-hook-package.xml</descriptor>
                                         <descriptor>src/main/assemblies/atlas-sqoop-hook-package.xml</descriptor>
-                                        <descriptor>src/main/assemblies/atlas-storm-hook-package.xml</descriptor>
+                                        <descriptor>src/main/assemblies/atlas-storm-hook-package.xml</descriptor> -->
                                         <descriptor>src/main/assemblies/atlas-kafka-hook-package.xml</descriptor>
                                         <descriptor>src/main/assemblies/atlas-server-package.xml</descriptor>
                                         <descriptor>src/main/assemblies/standalone-package.xml</descriptor>
