Revert "update auth and other changes from atlas-v2"
This reverts commit f92ab052349a3c4773969498e1a95de0daf56020.

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -509,7 +509,7 @@ atlas.graph.storage.conf-file=${sys:atlas.home}/conf/cassandra.yml
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <inherited>false</inherited>
-                <!-- <executions>
+                <executions>
                     <execution>
                         <configuration>
                             <skip>${skipTests}</skip>
@@ -528,7 +528,7 @@ atlas.graph.storage.conf-file=${sys:atlas.home}/conf/cassandra.yml
                             <goal>exec</goal>
                         </goals>
                     </execution>
-                </executions> -->
+                </executions>
             </plugin>
 
             <plugin>
