--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -131,3 +131,23 @@ jobs:
           owner: atlanhq
           repo: atlan-v2
           commitish: ${{ steps.get_latest_tag.outputs.charts_tag }}
+
+        - name: Check out into atlan repo
+          uses: actions/checkout@v2
+          with:
+            ref: ${{ steps.get_branch.outputs.branch }}
+            repository: atlanhq/atlan
+            token: ${{ secrets.my_pat }}
+
+        - name: Add Changelog
+          run: |
+            mkdir -p gitlog
+            echo "- ${{ github.event.head_commit.message }}">>gitlog/${{ github.event.repository.name }}.txt
+            chmod +x ./scripts/create_changelog.sh
+            ./scripts/create_changelog.sh
+            git add .
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git commit -m "${{ github.event.repository.name }}"
+            git push origin
+
