--- a/addons/elasticsearch/es-audit-mappings.json
+++ b/addons/elasticsearch/es-audit-mappings.json
@@ -1,7 +1,7 @@
 {
   "mappings": {
     "properties": {
-      "entityid": {
+      "entityId": {
         "type": "keyword"
       },
       "created": {
@@ -14,6 +14,9 @@
         "type": "nested"
       },
       "user": {
+        "type": "keyword"
+      },
+      "eventKey": {
         "type": "keyword"
       }
     }
