META-2805 ES mapping for timestamp

--- a/addons/elasticsearch/es-audit-mappings.json
+++ b/addons/elasticsearch/es-audit-mappings.json
@@ -7,6 +7,9 @@
       "created": {
         "type": "date"
       },
+      "timestamp": {
+        "type": "date"
+      },
       "action": {
         "type": "keyword"
       },
