--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Check out into atlan repo
         uses: actions/checkout@v2
         with:
-          ref: main
+          ref: ${{ steps.get_branch.outputs.branch }}
           repository: atlanhq/atlan
           token: ${{ secrets.my_pat }}
 
@@ -100,9 +100,9 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
-          branch: main
+          branch: ${{ steps.get_branch.outputs.branch }}
           author_name: atlan-ci
           author_email: it@atlan.com
           message: '${{ github.event.repository.name }}'
           default_author: user_info
-          push: origin main
+          push: origin ${{ steps.get_branch.outputs.branch }}
