META-2984 Fixed ES mapping

--- a/addons/elasticsearch/es-search-logs-mappings.json
+++ b/addons/elasticsearch/es-search-logs-mappings.json
@@ -43,7 +43,7 @@
       "entityQFNamesDenied": {
         "type": "keyword"
       },
-      "utm_tags": {
+      "utmTags": {
         "type": "keyword"
       },
 
