--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,9 +21,7 @@ name: Java CI with Maven
 on:
   push:
     branches:
-      - alpha
-      - development
-      - master
+      - beta
 
 jobs:
   build:
@@ -80,28 +78,56 @@ jobs:
           tags: |
             ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:latest
             ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:${{ steps.get_version.outputs.version }}
-
-
-      - name: Check out into atlan repo
+     
+      - name: Check out into atlan-v2 repo
         uses: actions/checkout@v2
         with:
-          ref: main
-          repository: atlanhq/atlan
+          fetch-depth: 0
+          ref: master
+          repository: atlanhq/atlan-v2
           token: ${{ secrets.my_pat }}
 
-      - name: Add Changelog
+      - name: Get previous tag from atlan-v2 repo
+        id: get_latest_tag
         run: |
-          mkdir -p gitlog
-          echo "- ${{ github.event.head_commit.message }}">>gitlog/${{ github.event.repository.name }}.txt
-          chmod +x ./scripts/create_changelog.sh
-          ./scripts/create_changelog.sh
+          repo_branch=${{ steps.get_branch.outputs.branch }}
+          # if [[ "$repo_branch" == "main" ]]; then
+          #   charts_tag="main"
+          # elif [[ "$repo_branch" == "beta" ]]; then
+          #   charts_tag="development"
+          # else 
+          charts_tag="$repo_branch"
+          # fi
+          echo "##[set-output name=charts_tag;]$(echo $charts_tag)"
+          tag=$(git tag | grep "\<$charts_tag\>" | sort -V | grep 'v[0-9].*' | tail -1)
+          echo "##[set-output name=tag;]$(git tag | grep "\<$charts_tag\>" | sort -V | grep 'v[0-9].*' | tail -1)"
+          if echo $tag | grep "999"; then
+              echo "##[set-output name=command;]$(echo 'm')"
+          else
+              echo "##[set-output name=command;]$(echo 'p')"
+          fi
+        shell: bash
 
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
+      - name: Get new tag by doing semver version bump
+        id: bump_tag
+        run: |
+          chmod +x ./scripts/semver-version-upgrade.sh
+          bumped_tag=$(./scripts/semver-version-upgrade.sh -${{ steps.get_latest_tag.outputs.command }} ${{ steps.get_latest_tag.outputs.tag }})
+          echo "##[set-output name=new_tag;]$(echo $bumped_tag)"
+          
+      - name: Create Release on atlan-v2 repo
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.my_pat }}
         with:
-          branch: main
-          author_name: atlan-ci
-          author_email: it@atlan.com
-          message: '${{ github.event.repository.name }}'
-          default_author: user_info
-          push: origin main
+          tag_name: ${{ steps.bump_tag.outputs.new_tag }}-${{ steps.get_latest_tag.outputs.charts_tag }}
+          release_name: ${{ github.event.repository.name }}
+          body: |
+            ${{ github.event.head_commit.message }}
+            Commit id - ${{ steps.get_version.outputs.version }}
+          draft: false
+          prerelease: false
+          owner: atlanhq
+          repo: atlan-v2
+          commitish: ${{ steps.get_latest_tag.outputs.charts_tag }}
