META-3046 Added a generic way to update the mappings. Dsiabled the type inference for audit mapping

--- a/addons/elasticsearch/es-audit-mappings.json
+++ b/addons/elasticsearch/es-audit-mappings.json
@@ -28,6 +28,8 @@
       "eventKey": {
         "type": "keyword"
       }
-    }
+    },
+    "date_detection": false,
+    "numeric_detection": false
   }
 }
