--- a/addons/elasticsearch/es-settings.json
+++ b/addons/elasticsearch/es-settings.json
@@ -5,9 +5,10 @@
         "type": "custom",
         "tokenizer": "atlan_tokenizer",
         "filter": [
-          "apostrophe", "lowercase"
+          "apostrophe",
+          "lowercase"
         ],
-        "char_filter":[
+        "char_filter": [
           "number_filter"
         ]
       },
@@ -22,16 +23,18 @@
         "type": "custom",
         "tokenizer": "atlan_tokenizer",
         "filter": [
-          "snowball_english", "lowercase"
+          "snowball_english",
+          "lowercase"
         ],
-        "char_filter":[
+        "char_filter": [
           "number_filter"
         ]
       },
       "search_synonyms": {
         "type": "custom",
         "filter": [
-          "graph_synonyms", "lowercase"
+          "graph_synonyms",
+          "lowercase"
         ],
         "tokenizer": "atlan_tokenizer"
       }
@@ -39,7 +42,9 @@
     "normalizer": {
       "atlan_normalizer": {
         "type": "custom",
-        "filter": ["lowercase"]
+        "filter": [
+          "lowercase"
+        ]
       }
     },
     "filter": {
@@ -62,11 +67,11 @@
         "pattern": ","
       }
     },
-    "char_filter":{
-      "number_filter":{
-        "type":"pattern_replace",
-        "pattern":"\\d+",
-        "replacement":" $0"
+    "char_filter": {
+      "number_filter": {
+        "type": "pattern_replace",
+        "pattern": "\\d+",
+        "replacement": " $0"
       }
     }
   }
