META-3040 support for search logs

--- a/addons/elasticsearch/es-search-logs-mappings.json
+++ b/addons/elasticsearch/es-search-logs-mappings.json
@@ -11,6 +11,13 @@
         "type": "keyword"
       },
 
+      "persona": {
+        "type": "keyword"
+      },
+      "purpose": {
+        "type": "keyword"
+      },
+
       "userAgent": {
         "type": "keyword"
       },
