Re-instate maven.yml

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,6 @@ on:
       - beta
       - development
       - master
-      - classificationexp
 
 jobs:
   build:
@@ -87,7 +86,7 @@ jobs:
       - name: Check out into atlan repo
         uses: actions/checkout@v2
         with:
-          ref: classificationexp
+          ref: main
           repository: atlanhq/atlan
           token: ${{ secrets.my_pat }}
 
@@ -101,9 +100,9 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v7
         with:
-          branch: classificationexp
+          branch: main
           author_name: atlan-ci
           author_email: it@atlan.com
           message: '${{ github.event.repository.name }}'
           default_author: user_info
-          push: origin classificationexp
+          push: origin main
