META-3114 : Replace log4j1 with reload4j for CVE - changed scope to compile for reload4j

--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -93,6 +93,7 @@
             <groupId>ch.qos.reload4j</groupId>
             <artifactId>reload4j</artifactId>
             <version>${reload4j.version}</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
