--- a/.github/workflows/main-ecr.yml
+++ b/.github/workflows/main-ecr.yml
@@ -61,7 +61,7 @@ jobs:
         echo "##[set-output name=region;]$(echo ${region})"
       
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@master
       with:
         role-to-assume: ${{ steps.get_ecr-details.outputs.iamRole }}
         aws-region: ${{ steps.get_ecr-details.outputs.region }}
