--- a/.github/workflows/main-ecr.yml
+++ b/.github/workflows/main-ecr.yml
@@ -9,13 +9,12 @@ on:
       - master
       - ecrdev
 
-permissions:
-  id-token: write
-  contents: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
     steps:
     - name: Checkout Repo
       uses: actions/checkout@main
@@ -61,7 +60,7 @@ jobs:
         echo "##[set-output name=region;]$(echo ${region})"
       
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@master
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         role-to-assume: ${{ steps.get_ecr-details.outputs.iamRole }}
         aws-region: ${{ steps.get_ecr-details.outputs.region }}
