--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,12 @@ bs4==0.0.1
 charset-normalizer==2.0.12
 dateparser==1.1.0
 edgegrid-python==1.1.1
+Django==2.0.7
+django-celery-results==1.0.1
+django-cors-headers==2.4.0
+django-filter==1.1.0
+django-filters==0.2.1
+django-model-utils==3.1.1
+django-mysql==2.4.0
+django-nose==1.4.5
+django-silk==2.0.0
