--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ django-celery-results==1.0.1
 django-filter==1.1.0
 django-filters==0.2.1
 django-silk==2.0.0
+mysql-connector-python==8.0.28
+mysqlclient==2.1.0
+numpy==1.19.5
+o365==2.0.11
+paramiko==2.7.1
