--- a/.github/workflows/main-ecr.yml
+++ b/.github/workflows/main-ecr.yml
@@ -67,7 +67,7 @@ jobs:
         aws-region: ${{ steps.get_ecr-details.outputs.region }}
 
     - name: Check and create ECR Repo if it does not exist
-      uses: nick-invision/retry@v2
+      uses: nick-fields/retry@v2
       id: check_and_create_repo
       with:
         timeout_minutes: 10
