--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,9 @@ mysql-connector-python==8.0.28
 mysqlclient==2.1.0
 o365==2.0.11
 paramiko==2.7.1
+django-filter==1.1.0
+django-filters==0.2.1
+django-model-utils==3.1.1
+django-mysql==2.4.0
+django-nose==1.4.5
+django-silk==2.0.0
