META-3165 Add x-atlan-* headers to entity audits

--- a/addons/elasticsearch/es-audit-mappings.json
+++ b/addons/elasticsearch/es-audit-mappings.json
@@ -27,6 +27,15 @@
       },
       "eventKey": {
         "type": "keyword"
+      },
+      "x-atlan-agent": {
+        "type": "keyword"
+      },
+      "x-atlan-agent-id": {
+        "type": "keyword"
+      },
+      "x-atlan-package-alias": {
+        "type": "keyword"
       }
     },
     "date_detection": false,
