Build config update

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,10 @@ name: Java CI with Maven
 on:
   push:
     branches:
+      - alpha
+      - beta
+      - development
+      - master
       - classificationexp
 
 jobs:
