--- a/.github/workflows/main-ecr.yml
+++ b/.github/workflows/main-ecr.yml
@@ -50,7 +50,7 @@ jobs:
       id: get_ecr-details
       run: |
         branch_name=${{ steps.get_branch.outputs.branch }} 
-        if [[ $branch_name == 'main' || $branch_name == 'staging' || $branch_name == 'master' ]]
+        if [[ $branch_name == 'main' || $branch_name == 'staging' || $branch_name == 'master' || $branch_name == 'typedefsyncv1' ]]
             then
               iamRole=${{ secrets.AWS_PROD_PLATFORM_ECR_ACCESS }}
               region='us-east-1'
