--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -299,6 +299,7 @@
             <groupId>org.apache.ranger</groupId>
             <artifactId>ranger-plugins-common</artifactId>
             <version>2.2.0</version>
+            <!-- Require only org.apache.ranger.plugin.model -->
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jersey</groupId>
