--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -572,10 +572,12 @@
                         <overlay>
                             <groupId>org.apache.atlas</groupId>
                             <artifactId>atlas-dashboardv2</artifactId>
+                            <skip>${skipDashboard}</skip>
                         </overlay>
                         <overlay>
                             <groupId>org.apache.atlas</groupId>
                             <artifactId>atlas-dashboardv3</artifactId>
+                            <skip>${skipDashboard}</skip>
                         </overlay>
                         <overlay>
                             <!-- empty groupId/artifactId represents the current build -->
