META-4026 overlay skip

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -597,7 +597,7 @@
                         </manifest>
                     </archive>
                     <packagingExcludes>
-                        WEB-INF/lib/dom4j-*.jar,${packages.to.exclude},${project.build.directory}
+                        WEB-INF/lib/dom4j-*.jar,${packages.to.exclude}
                     </packagingExcludes>
                 </configuration>
             </plugin>
