META-4026 added dashboard modules back

--- a/pom.xml
+++ b/pom.xml
@@ -786,6 +786,8 @@
         <module>graphdb</module>
         <module>repository</module>
         <module>authorization</module>
+        <module>dashboardv2</module>
+        <module>dashboardv3</module>
         <module>webapp</module>
         <module>docs</module>
 
