META-4026 added logs

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,8 +53,10 @@ jobs:
           branch_name=${{ steps.get_branch.outputs.branch }} 
           if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'lineageondemand' ]]
           then
+              echo "build without dashboard"
               chmod +x ./build.sh && ./build.sh build_without_dashboard
           else
+              echo "build with dashboard"
               chmod +x ./build.sh && ./build.sh
           fi
 
