--- a/.github/workflows/main-ecr.yml
+++ b/.github/workflows/main-ecr.yml
@@ -48,8 +48,10 @@ jobs:
         branch_name=${{ steps.get_branch.outputs.branch }} 
         if [[ $branch_name == 'main' || $branch_name == 'master' || $branch_name == 'lineageondemand' ]]
         then
+            echo "build without dashboard"
             chmod +x ./build.sh && ./build.sh build_without_dashboard
         else
+            echo "build with dashboard"
             chmod +x ./build.sh && ./build.sh
         fi
 
