--- a/pom.xml
+++ b/pom.xml
@@ -752,7 +752,7 @@
         <projectBaseDir>${project.basedir}</projectBaseDir>
         <skipCheck>false</skipCheck>
         <skipDocs>true</skipDocs>
-        <skipEnunciate>false</skipEnunciate>
+        <skipEnunciate>true</skipEnunciate>
         <skipITs>false</skipITs>
         <skipSite>true</skipSite>
         <skipTests>false</skipTests>
