--- a/.github/workflows/wiz-image-scanning.yml
+++ b/.github/workflows/wiz-image-scanning.yml
@@ -18,14 +18,7 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches:
-      - alpha
-      - beta
-      - development
-      - master
-      - lineageondemand
+on: [pull_request]
 
 jobs:
   build:
