--- a/.github/workflows/trivy-image-scan.yml
+++ b/.github/workflows/trivy-image-scan.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Scan Image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: 'ubuntu:18.04'
+          image-ref: "ubuntu:18.04"
           vuln-type: 'os,library'
           format: 'sarif'
           output: 'trivy-results.sarif'
