--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -89,6 +89,7 @@ jobs:
       - name: Scan Image
         uses: aquasecurity/trivy-action@master
         with:
+          run: echo "${{ secrets.my_pat }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
           image-ref: ghcr.io/atlanhq/${{ github.event.repository.name }}-${{ steps.get_branch.outputs.branch }}:latest
           vuln-type: 'os,library'
           format: 'sarif'
