Breakup Ranger: Setup Keycloak client

--- a/auth-agents-common/pom.xml
+++ b/auth-agents-common/pom.xml
@@ -35,6 +35,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
+            <artifactId>client-keycloak</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.atlas</groupId>
