--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -151,6 +151,12 @@
 
         <dependency>
             <groupId>org.apache.atlas</groupId>
+            <artifactId>client-keycloak</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
             <artifactId>atlas-janusgraph-hbase2</artifactId>
             <version>${project.version}</version>
             <exclusions>
