Revert Fix compile issuse for storm plugin

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -545,10 +545,10 @@ atlas.graph.storage.conf-file=${sys:atlas.home}/conf/cassandra.yml
     </build>
 
     <!--Add a dependency here to ensure this module is the final one built-->
-    <!--<dependencies>
+    <dependencies>
         <dependency>
             <groupId>org.apache.atlas</groupId>
             <artifactId>storm-bridge</artifactId>
         </dependency>
-    </dependencies> -->
+    </dependencies>
 </project>
